--- a/module/histogram/css/style.css
+++ b/module/histogram/css/style.css
@@ -9,3 +9,9 @@ path {
     stroke:#4682B4;
     stroke-width: 2;
 }
+
+.domain, .tick line{
+    fill: none;
+    stroke: gray;
+    stroke-width: 1;
+}
